--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,10 +6,10 @@ project:
 website:
   title: "Lukman A. Soboyejo"
   page-navigation: true
-  site-url: "https://lucas-shubby.netlify.app/"
+  site-url: "https://lsoboyejo.netlify.app/"
   
   page-footer:
-    left:  "© 1996-2023, Lukman A. Soboyejo"
+    left:  "© 1992-2025, Lukman A. Soboyejo"
     background: "#536878"
     right:
       - icon: github
@@ -18,6 +18,7 @@ website:
         href: https://twitter.com/Hadeboye
       - icon: envelope
         href: lsoboyejo@student.unimelb.edu.au
+        
   twitter-card:
     creator: "@lucas_shubby"
     card-style: summary_large_image
@@ -28,8 +29,8 @@ website:
   navbar:
     background: "#536878"
     right:
-      - href: blogs/index.qmd
-        text: Blog
+      - href: experience/index.qmd
+        text: Experience
       - text: News
         menu:
         - text: All post
@@ -66,7 +67,7 @@ format:
 
 comments:
   giscus:
-    repo: lukeng200/Lukman_Academic_Hub
+    repo: lukeng200/lsoboyejo-webpage
 
 editor: visual
 
